<resources>
    //base
    <string name="app_name">Fire Rescue</string>
    //splash_screen
    <string name="name">Fire Rescue</string>
    //dashboard
    <string name="department_name">Colombo Fire Brigade</string>
    <string name="province_name">Western Province</string>
    <string name="btn_0">Chief\'s\nWelcome</string>
    <string name="btn_1">Stations\n</string>
    <string name="btn_2">Commend a Firefighter</string>
    <string name="btn_3">Contact\nDirectory</string>
    <string name="btn_4">Careers\n</string>
    <string name="btn_5">Witness\nStatements</string>
    <string name="btn_6">QR\nScanner</string>
    <string name="btn_7">Tips\n</string>
    <string name="btn_8">Contact\nUs</string>
    <string name="btn_9">Live Dispatch\nRadio</string>
    <string name="weather">N/A</string>
    //live_dispatch
    <string name="ld_title">Live Dispatch Radio</string>
    <string name="ld_subTitle">This feed is being provided by Colombo Fire Brigade, located in WP. The feed will provide a cycle of dispatch and tac channels for Fire and EMS only.</string>
    <string name="ld_feed_status">Feed Status : N/A</string>
    <string name="ld_feed_status_online">Feed Status : Online</string>
    //contact_list
    <string name="cl_title">Contact Directory</string>
    <string name="cl_position">Position</string>
    <string name="cl_station">Station</string>
    <string name="cl_dash">|</string>
    <string name="cl_email">Email</string>
    <string name="cl_phone_number">Phone Number</string>
    <string name="cl_full_name">Full Name</string>
    <string name="cl_id" />
    //contact_us
    <string name="cu_contact_us">Contact Us</string>
    <string name="cu_location">Main Fire Station (HQ)\nT.B. Jaya Mawatha, Colombo 10</string>
    <string name="cu_tel">Chief Fire Officer : 011 2686087\nAdministration Office : 0112686406</string>
    <string name="cu_fax">011-2692222</string>
    <string name="cu_open_map">Open Map</string>
    <string name="cu_emergency">011-2422222\n011-2422223</string>
    //faq
    <string name="faq_title">Tips</string>
    <string name="faq_topic">Topic</string>
    <string name="faq_subtopic">SubTopic</string>
    //commends
    <string name="cm_commend">Commend</string>
    <string name="cm_name">Name</string>
    <string name="cm_enter_name">Enter name</string>
    <string name="cm_feedback">Feedback</string>
    <string name="cm_feedback_hint">Tell us about your experience</string>
    <string name="cm_submit">Submit</string>
    <string name="cm_success">Success</string>
    <string name="cm_commendation_submitted">Your letter has been submitted.</string>
    <string name="cm_close">Close</string>
    <string name="cm_fail">Fail</string>
    <string name="cm_commendation_fail">Letter submission failed.</string>
    //social_media
    <string name="sm_title">Social Media</string>
    //stations_list_fragment
    <string name="s_stations">Stations</string>
    <string name="s_list">List</string>
    <string name="s_map">Map</string>
    <string name="s_station_name">Station Name</string>
    <string name="s_phone_number">Station Phone Number</string>
    <string name="s_station_phone_number">Station Phone Number</string>
    <string name="s_get_directions">Get Directions</string>
    <string name="s_alert_total_f_txt">Total Firefighters : N/A</string>
    <string name="s_alert_total_v_txt">Total Vehicles : N/A</string>
    <string name="s_alert_phone_txt">Phone Number : N/A</string>
    <string name="s_alert_address_txt">Address : N/A</string>
    //stations_map_fragment
    <string name="google_maps_api_key">AIzaSyBoFTJSHdg8NYoXZ5ij02g-jaNV_INQzIg</string>
    <string name="fsm_s_sub_title">We will need these permissions to give you a better user experience.</string>
    <string name="fsm_s_allow_location">Allow Location</string>
    <string name="fsm_s_allow_access_btn">Allow Access</string>
    <string name="fsm_s_not_now_btn">Not Now</string>
    <string name="fsm_s_search_editText">Enter Address, City</string>
    //events
    <string name="ew_all_plans">Upcoming</string>
    <string name="ew_title">Events</string>
    <string name="ew_month">January 2022</string>
    <string name="ew_event_name">Event Name</string>
    <string name="ew_event_starting_time">20:00</string>
    <string name="ew_dash">-</string>
    <string name="ew_event_ending_time">23:00</string>
    <string name="ew_event_location">Event Location</string>
    <string name="ew_date_and_month">16, January</string>
    //notifications
    <string name="n_title">Alerts</string>
    <string name="n_all">All</string>
    <string name="n_notification_title">Notification Title</string>
    <string name="n_notification_body">Notification Body</string>
    <string name="n_notification_time">Time</string>
    <string name="n_alert_time">Date : N/A</string>
    <string name="n_alert_title">Title : N/A</string>
    <string name="n_alert_body">Body : N/A</string>
    //qr_scanner
    <string name="qr_title">QR Scanner</string>
    <string name="qrh_history">History</string>
    <string name="qrh_help">Place the QR code or the barcode inside\nthe area</string>
    <string name="qrh_help2">Scanning will start automatically</string>
    <string name="qr_result_title">Results!</string>
    <string name="qr_result_n_a">N/A</string>
    <string name="qr_result_contents_text">Contents:</string>
    <string name="qr_result_open">Open</string>
    //careers
    <string name="c_recent_jobs">Available Positions</string>
    <string name="c_careers">Careers</string>
    <string name="c_card_work_time">Full Time</string>
    <string name="c_card_location">HQ</string>
    <string name="c_card_name">Firefighter</string>
    //career_details
    <string name="cd_salary">$40,000/year</string>
    <string name="cd_date">Jan 11, 2022</string>
    <string name="cd_description_title">Description</string>
    <string name="cd_description">The Firefighter has responsibility to ensure his/her assigned apparatus, equipment and facilities are maintained in appropriate readiness to respond to a variety of life saving emergency calls. The Firefighter is primarily responsible for performing difficult and lifesaving work at emergency scenes including fire suppression, rescue, and emergency medical care and general preparatory work at the fire station, checking equipment for proper operation and general condition, and performing and assisting with routine maintenance of apparatus and equipment.</string>
    <string name="cd_req_title">Requirements</string>
    <string name="cd_age_title">Age:</string>
    <string name="cd_age">18+</string>
    <string name="cd_education_title">Education:</string>
    <string name="cd_location">HQ</string>
    <string name="cd_education"><![CDATA[Certified Firefighter through TCFP & Certified or licensed Paramedic through TDSHS or National registry at time of written examination.]]></string>
    <string name="cd_apply_now">Apply Now</string>
    //witness_statements
    <string name="ws_title">Witness Statements</string>
    <string name="ws_dob">D.O.B</string>
    <string name="ws_date">Date</string>
    <string name="ws_time">Time</string>
    <string name="ws_enter_additional_notes">Additional notes</string>
    <string name="ws_officer_signature">Officer signature</string>
    <string name="ws_witness_signature">Witness signature</string>
    <string name="ws_email">Email</string>
    <string name="ws_email_to_get_a_copy">Email to get a copy</string>
    <string name="news_title">News</string>
    <string name="ws_date_and_time"><![CDATA[Date & time]]></string>
    <string name="ws_date_and_time_txt"><![CDATA[Date & time]]></string>
    //chief's_welcome
    <string name="cw_title">Chief\'s Welcome</string>
    <string name="cw_message">Welcome and thanks for visiting the Colombo Fire Brigade mobile app. We believe this app will be able to make the service you provide more efficient.\n\nIt\'s our goal to continue to develop and enhance the app as another way to help our staff.\n\nIt\'s pleasure to lead this department as we grow and advance in a manner fitting and proper for the community. We continue to evaluate services and programs to ensure they are delivered and professional and well trained manner. We also enjoy leading a hand in activities that make our community what it is.\n\nIf you still have questions feel to contact us.</string>
    <string name="cw_chief_name">Chief\nColombo Fire Brigade</string>
    //settings
    <string name="st_title">Settings</string>
    <string name="st_permissions">Permissions</string>
    <string name="st_location">Location</string>
    <string name="st_camera">Camera</string>
    <string name="st_push_notifications">Push Notifications</string>
    <string name="st_about">About</string>
    <string name="st_version">Version</string>
    <string name="st_version_number">N/A</string>
</resources>