<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10sp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/cl_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="38dp"
                android:fontFamily="@font/product_sans_bold"
                android:text="@string/cl_full_name"
                android:textAlignment="center"
                android:textColor="@color/dark_black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/cl_icon"
                app:layout_constraintStart_toEndOf="@+id/cl_icon"
                app:layout_constraintTop_toTopOf="@+id/cl_icon"
                app:layout_constraintVertical_bias="0.47" />

            <ImageView
                android:id="@+id/cl_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/profile"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/cl_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/cl_position"
                android:textColor="@color/dark_gray"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/cl_name"
                app:layout_constraintTop_toBottomOf="@+id/cl_name" />

            <TextView
                android:id="@+id/cl_station"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/product_sans_bold"
                android:text="@string/cl_station"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/cl_dash"
                app:layout_constraintTop_toTopOf="@+id/cl_dash" />

            <TextView
                android:id="@+id/cl_dash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/cl_dash"
                android:textAlignment="center"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/cl_name"
                app:layout_constraintTop_toTopOf="@+id/cl_name" />

            <TextView
                android:id="@+id/cl_id"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/cl_id"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/cl_icon"
                app:layout_constraintEnd_toEndOf="@+id/cl_icon"
                app:layout_constraintStart_toStartOf="@+id/cl_icon"
                app:layout_constraintTop_toTopOf="@+id/cl_icon" />

            <TextView
                android:id="@+id/cl_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/product_sans_bold"
                android:text="@string/cl_email"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="@+id/cl_position"
                app:layout_constraintTop_toBottomOf="@+id/cl_position" />

            <TextView
                android:id="@+id/cl_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/product_sans_bold"
                android:text="@string/cl_phone_number"
                android:textColor="@color/gray"
                android:textAlignment="center"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_position" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>