<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10sp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/n_notification_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/product_sans_bold"
                android:text="@string/n_notification_title"
                android:textAlignment="center"
                android:textColor="@color/dark_black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/n_icon"
                app:layout_constraintTop_toTopOf="@+id/n_icon" />

            <androidx.cardview.widget.CardView
                android:id="@+id/n_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="150dp"
                app:cardElevation="5dp"
                android:layout_margin="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:srcCompat="@drawable/app_icon"
                    tools:ignore="ContentDescription"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/n_notification_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/n_notification_body"
                android:textColor="@color/dark_gray"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/n_notification_title"
                app:layout_constraintTop_toBottomOf="@+id/n_notification_title" />

            <TextView
                android:id="@+id/n_notification_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/n_notification_time"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/n_notification_body"
                app:layout_constraintTop_toBottomOf="@+id/n_notification_body" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>